Added hetzner as supported cloud provider

--- a/ansible/defaults/secrets.example.yml
+++ b/ansible/defaults/secrets.example.yml
@@ -1,2 +1,4 @@
 ---
-do_token: abcdefg
+tokens:
+  digitalocean: abcdefghijklmnopqrstuvwqyzabcdefghijklmnopqrstuvwqyzabcdefghijqr
+  hetzner: abcdefghijklmnopqrstuvwqyzabcdefghijklmnopqrstuvwqyzabcdefghijqr
