--- a/ansible/defaults/template_info.example.yml
+++ b/ansible/defaults/template_info.example.yml
@@ -1,5 +1,5 @@
 ---
-sshkey_folder: /home/user/.ssh/
+sshkey_folder: /home/justin/.ssh/
 
 vps_name: testvm
 domain: "testing.test"
@@ -8,3 +8,5 @@ server_hostname: "{{ vps_name  }}.{{ domain }}"
 root_username: root
 root_private_key_path: "{{ sshkey_folder }}/{{ root_username }}-{{ vps_name }}"
 root_public_key_path: "{{ sshkey_folder }}/{{ root_username }}-{{ vps_name }}.pub"
+
+cloud_provider: "digitalocean"
