--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -5,27 +5,28 @@
 - ansible.builtin.import_playbook: tasks/terraform/destroy.yml
   tags: ['never', 'destroy']
 
-- hosts: group_1
-  vars_files:
-    - "{{ playbook_dir }}/defaults/main.yml"
-    - "{{ playbook_dir }}/defaults/template_info.yml"
-
-  vars:
-    ansible_user: "{{ root_username }}"
-    ansible_ssh_private_key_file: "{{ root_private_key_path }}"
-
-  pre_tasks:
-    - name: Get required roles with Ansible Galaxy
-      ansible.builtin.command: ansible-galaxy install -r files/requirements.yml -p roles/
-      delegate_to: localhost
-      changed_when: false
-      tags: always
-
-    - name: Bootstrap host with barebones config
-      ansible.builtin.import_tasks: tasks/bootstrap/main.yml
-      tags: ['never', 'create']
-
-  tasks:
-    - name: Your tasks here
-      ansible.builtin.import_tasks: tasks/main.yml
-      tags: always
+#- hosts: group_1
+#  vars_files:
+#    - "{{ playbook_dir }}/defaults/main.yml"
+#    - "{{ playbook_dir }}/defaults/template_info.yml"
+#
+#  vars:
+#    ansible_user: "{{ root_username }}"
+#    ansible_ssh_private_key_file: "{{ root_private_key_path }}"
+#
+#  pre_tasks:
+#    - name: Get required roles with Ansible Galaxy
+#      ansible.builtin.command: ansible-galaxy install -r files/requirements.yml -p roles/
+#      delegate_to: localhost
+#      changed_when: false
+#      tags: always
+#
+#    - name: Bootstrap host with barebones config
+#      ansible.builtin.import_tasks: tasks/bootstrap/main.yml
+#      tags: ['never', 'create']
+#
+#  tasks:
+#    - name: Your tasks here
+#      ansible.builtin.import_tasks: tasks/main.yml
+#      tags: always
+#
