--- a/ansible/tasks/bootstrap/main.yml
+++ b/ansible/tasks/bootstrap/main.yml
@@ -23,7 +23,7 @@
   ansible.builtin.include_role:
     name: robertdebock.update
   vars:
-    update_reboot: false
+    update_reboot: true
 
 - name: Run 'robertdebock.firewall'-role
   ansible.builtin.include_role:
@@ -31,13 +31,6 @@
   vars:
     firewall_services:
       - name: ssh
-
-- name: Run 'robertdebock.hostname'-role
-  ansible.builtin.include_role:
-    name: robertdebock.hostname
-  vars:
-    hostname: "{{ server_hostname }}"
-    hostname_reboot: true
 
 - name: Flush handlers triggerd turing bootstrap
   meta: flush_handlers
