--- a/ansible/tasks/terraform/create.yml
+++ b/ansible/tasks/terraform/create.yml
@@ -10,7 +10,7 @@
   pre_tasks:
     - name: Ensure needed ssh keys are created.
       community.crypto.openssh_keypair:
-        path: "{{ sshkey_folder }}/{{ item }}-{{ vps_name }}"
+        path: "{{ sshkey_folder }}/{{ item }}-{{ project_name }}"
       with_items:
         - "{{ root_username }}"
 
@@ -24,37 +24,19 @@
     - name: "Ensure 'terraform.tfvars' template is deployed"
       ansible.builtin.template:
         src: "{{ playbook_dir }}/../../templates/{{ _cloud_provider }}_terraform.tfvars.j2"
-        dest: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm/terraform.tfvars"
+        dest: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/vm/terraform.tfvars"
 
   tasks:
     - name: Ensure host is deployed with terraform on {{ _cloud_provider }}.
       community.general.terraform:
-        project_path: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm"
-        variables_files: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm/terraform.tfvars"
+        project_path: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/vm"
+        variables_files: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/vm/terraform.tfvars"
         force_init: true
       register: terraform_infra
 
     - name: Add deployed host to ansible inventory.
       ansible.builtin.add_host:
-        hostname: "{{ terraform_infra.outputs.vps_ipv4_address.value }}"
-        groups: group_1
+        hostname: "{{ item.value.ipv4_address }}"
+        groups: "{{ item.key }}"
       changed_when: false
-
-    - name: Scan ~/.ssh/known_host file for a entry of {{ terraform_infra.outputs.vps_ipv4_address.value }}
-      ansible.builtin.command: ssh-keygen -H -F {{ terraform_infra.outputs.vps_ipv4_address.value }}
-      delegate_to: localhost
-      register: keygen_scan
-      changed_when: '"found: line" in keygen_scan.stdout'
-      failed_when:
-        - keygen_scan.rc != 0 and keygen_scan.rc != 1
-
-    - name: Remove {{ terraform_infra.outputs.vps_ipv4_address.value }} from SSH known hosts if it was found.
-      ansible.builtin.command: ssh-keygen -R {{ terraform_infra.outputs.vps_ipv4_address.value }}
-      delegate_to: localhost
-      register: keygen_remove
-      when: '"found: line" in keygen_scan.stdout'
-
-    - name: Add {{ terraform_infra.outputs.vps_ipv4_address.value }} to SSH known hosts.
-      ansible.builtin.shell: ssh-keyscan -H {{ terraform_infra.outputs.vps_ipv4_address.value }} >> ~/.ssh/known_hosts
-      delegate_to: localhost
-      changed_when: true
+      with_dict: "{{ terraform_infra.outputs.vms.value }}"
