--- a/ansible/defaults/template_info.example.yml
+++ b/ansible/defaults/template_info.example.yml
@@ -1,32 +1,37 @@
 ---
 project_name: testing
-cloud_provider: "digitalocean"
+sshkey_folder: /home/justin-p/.ssh/
+## Example on how to define a host_list map to create multiple hosts and/or create hosts on multiple providers.
+## Tags/lables will be used as ansible groups so you can easily apply certain playbooks/roles against specific hosts.
+## This means that the host will be added ansible groups with the same name of the tags/label added below.
+## For all the options you can define per host look at the terraform.tfvars.j2 template.
+## For example you overwrite the size of the VM or the OS by adding it to this map.
+#
+# host_list: {
+#   digitalocean: [
+#     { "name": "test01",
+#       "tag": "[\"nginx\"]"
+#     },
+#     { "name": "test02",
+#       "tag": "[\"mysql\"]"
+#     },
+#   ],
+#   hetzner: [
+#     { "name": "test03",
+#       "labels": "{postfix = \"\"}"
+#     }
+#   ]
+# }
+#
 
-sshkey_folder: /home/justin/.ssh/
+host_list: {
+  digitalocean: [
+    { "name": "test01",
+      "tag": "[\"ansible\"]"
+    },
+  ]
+}
 
 root_username: root
-root_private_key_path: "{{ sshkey_folder }}/{{ root_username }}-{{ vps_name }}"
-root_public_key_path: "{{ sshkey_folder }}/{{ root_username }}-{{ vps_name }}.pub"
-
-## Example on how to define a host_list map to create multipe hosts.
-## Tags will be used as ansible groups.
-## This means that the host will be added ansible groups with the same name of the tags added below.
-## For all the options you can define in the map look at the terraform.tfvars.j2 template.
-#
-#do_host_list: [
-# { "name": "test01",
-#   "tag": "[\"evilginx\"]"
-# },
-# { "name": "test02",
-#   "tag": "[\"nginx\"]"
-# }
-#
-#
-#hetzner_host_list: [
-# { "name": "test03",
-#   "labels": "{mailhost = \"\"}"
-# },
-# { "name": "test04",
-#   "labels": "{mailgateway = \"\"}"
-# }
-#
+root_private_key_path: "{{ sshkey_folder }}/{{ root_username }}-{{ project_name }}"
+root_public_key_path: "{{ sshkey_folder }}/{{ root_username }}-{{ project_name }}.pub"
