--- a/ansible/tasks/terraform/create.yml
+++ b/ansible/tasks/terraform/create.yml
@@ -3,59 +3,42 @@
   gather_facts: false
 
   vars_files:
-    - "{{ playbook_dir }}/../../vars/main.yml"
     - "{{ playbook_dir }}/../../defaults/template_info.yml"
     - "{{ playbook_dir }}/../../defaults/secrets.yml"
 
   pre_tasks:
-    - name: Ensure needed ssh keys are created.
+    - name: Ensure needed ssh keys are created
       community.crypto.openssh_keypair:
         path: "{{ sshkey_folder }}/{{ item }}-{{ project_name }}"
       with_items:
         - "{{ root_username }}"
 
-    - name: "Ensure {{ sshkey_folder }}/known_hosts exists"
-      ansible.builtin.copy:
-        content: ""
-        dest: "{{ sshkey_folder }}/known_hosts"
-        force: false
-        mode: 0664
-
-    - name: "Ensure 'terraform.tfvars' template is deployed"
+    - name: Ensure 'terraform.tfvars' template is deployed
       ansible.builtin.template:
-        src: "{{ playbook_dir }}/../../templates/{{ item }}_terraform.tfvars.j2"
-        dest: "{{ playbook_dir }}/../../../terraform/{{ item }}/vm/terraform.tfvars"
-      loop: "{{ host_list.keys() }}"
+        src: "{{ playbook_dir }}/../../templates/terraform.tfvars.j2"
+        dest: "{{ playbook_dir }}/../../../terraform/terraform.tfvars"
 
   tasks:
-    - name: Ensure each host is deployed with terraform on digitalocean.
+    - name: Run terraform to create infrastructure
       community.general.terraform:
-        project_path: "{{ playbook_dir }}/../../../terraform/digitalocean/vm"
-        variables_files: "{{ playbook_dir }}/../../../terraform/digitalocean/vm/terraform.tfvars"
+        project_path: "{{ playbook_dir }}/../../../terraform/"
+        variables_files: "{{ playbook_dir }}/../../../terraform/terraform.tfvars"
         force_init: true
-      register: terraform_infra_digitalocean
-      when: host_list['digitalocean'][0] is defined
+      register: terraform_infra
+      when: host_list is defined
 
-    - name: Ensure each host is deployed with terraform on hetzner.
-      community.general.terraform:
-        project_path: "{{ playbook_dir }}/../../../terraform/hetzner/vm"
-        variables_files: "{{ playbook_dir }}/../../../terraform/hetzner/vm/terraform.tfvars"
-        force_init: true
-      register: terraform_infra_hetzner
-      when: host_list['hetzner'][0] is defined
-
-    - name: Add each deployed digitalocean host to ansible inventory.
+    - name: Add each deployed digitalocean host to ansible inventory
       ansible.builtin.add_host:
-        hostname: "{{ item.value.ipv4_address }}"
-        groups: "{{ item.value.tags }}"
+        hostname: "{{ item.value['vm'][0]['ipv4_address'] }}"
+        groups: "{{ item.value['vm'][0]['tags'] }}"
       changed_when: false
-      with_dict: "{{ terraform_infra_digitalocean.outputs.vms.value }}"
-      when: terraform_infra_digitalocean.outputs.vms.value is defined
+      with_dict: "{{ terraform_infra.outputs['digitalocean_vms'].value }}"
+      when: terraform_infra.outputs['digitalocean_vms'].value['you_should_never_use_this_host_name']['vm'] is not defined
 
-    - name: Add each deployed hetzner host to ansible inventory.
+    - name: Add each deployed hetzner host to ansible inventory
       ansible.builtin.add_host:
-        hostname: "{{ item.value.ipv4_address }}"
-        groups: "{{ item.value.labels.keys() }}"
+        hostname: "{{ item.value['vm'][0]['ipv4_address'] }}"
+        groups: "{{ item.value['vm'][0]['labels'].keys() }}"
       changed_when: false
-      with_dict: "{{ terraform_infra_hetzner.outputs.vms.value }}"
-      when: terraform_infra_hetzner.outputs.vms.value is defined      
+      with_dict: "{{ terraform_infra.outputs['hetzner_vms'].value }}"
+      when: terraform_infra.outputs['hetzner_vms'].value['you_should_never_use_this_host_name']['vm'] is not defined
