--- a/ansible/tasks/terraform/destroy.yml
+++ b/ansible/tasks/terraform/destroy.yml
@@ -3,41 +3,19 @@
   gather_facts: false
 
   vars_files:
-    - "{{ playbook_dir }}/../../vars/main.yml"
     - "{{ playbook_dir }}/../../defaults/template_info.yml"
     - "{{ playbook_dir }}/../../defaults/secrets.yml"
 
   tasks:
-    - name: Gathering facts.
+    - name: Ensure all host are destroyed with terraform
       community.general.terraform:
-        project_path: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm"
-        variables_files: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm/terraform.tfvars"
-        force_init: true
-      register: terraform_infra
-
-    - name: Scan ~/.ssh/known_host file for a entry of {{ terraform_infra.outputs.vps_ipv4_address.value }}
-      ansible.builtin.command: ssh-keygen -H -F {{ terraform_infra.outputs.vps_ipv4_address.value }}
-      delegate_to: localhost
-      register: keygen_scan
-      changed_when: '"found: line" in keygen_scan.stdout'
-      failed_when:
-        - keygen_scan.rc != 0 and keygen_scan.rc != 1
-
-    - name: Remove {{ terraform_infra.outputs.vps_ipv4_address.value }} from SSH known hosts if it was found
-      ansible.builtin.command: ssh-keygen -R {{ terraform_infra.outputs.vps_ipv4_address.value }}
-      delegate_to: localhost
-      register: keygen_remove
-      when: '"found: line" in keygen_scan.stdout'
-
-    - name: Ensure host is destroyed with terraform on {{ _cloud_provider }}.
-      community.general.terraform:
-        project_path: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm"
-        variables_files: "{{ playbook_dir }}/../../../terraform/{{ _cloud_provider }}/single_vm/terraform.tfvars"
+        project_path: "{{ playbook_dir }}/../../../terraform/"
+        variables_files: "{{ playbook_dir }}/../../../terraform/terraform.tfvars"
         state: absent
 
     - name: Ensure local ssh keys are destroyed
       ansible.builtin.file:
-        path: "{{ sshkey_folder }}/{{ item }}-{{ vps_name }}"
+        path: "{{ sshkey_folder }}/{{ item }}-{{ project_name }}"
         state: absent
       with_items:
         - "{{ root_username }}"
