--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,18 +1,19 @@
 ---
-- ansible.builtin.import_playbook: tasks/terraform/create.yml
-  tags: always
+- ansible.builtin.import_playbook: playbooks/terraform/tfvars.yml
+  tags: ['never', 'tfvars']
 
-- ansible.builtin.import_playbook: tasks/terraform/destroy.yml
+- ansible.builtin.import_playbook: playbooks/terraform/create.yml
+  tags: always
+  when: 
+    - "'tfvars' not in ansible_run_tags"  
+    - "'destroy' not in ansible_run_tags"
+    - "'roles' not in ansible_run_tags"
+  
+- ansible.builtin.import_playbook: playbooks/terraform/destroy.yml
   tags: ['never', 'destroy']
 
-- hosts: localhost
-  gather_facts: false
-  pre_tasks:
-    - name: Get required roles with Ansible Galaxy
-      ansible.builtin.command: ansible-galaxy install -r files/requirements.yml -p roles/
-      delegate_to: localhost
-      changed_when: false
-      tags: always
+- ansible.builtin.import_playbook: playbooks/ansible_galaxy/main.yml
+  tags: ['never', 'create', 'roles']
 
 - hosts: all
   vars_files:
@@ -24,20 +25,31 @@
     ansible_ssh_private_key_file: "{{ root_private_key_path }}"
   
   tasks:
-    - name: Bootstrap host with barebones config
+    - name: Bootstrap host with bare bones config
       ansible.builtin.import_tasks: tasks/bootstrap/main.yml
-      tags: ['never', 'create']
+      tags: ['never', 'create', 'bootstrap']
 
-## add your plays here
+## add your plays/tasks here
+- hosts: all:or_use_a_group_name
+  vars_files:
+    - "{{ playbook_dir }}/defaults/template_info.yml"
+  vars:
+    ansible_user: "{{ root_username }}"
+    ansible_ssh_private_key_file: "{{ root_private_key_path }}"
 
-#- hosts: your_group
-#  vars_files:
-#    - "{{ playbook_dir }}/defaults/template_info.yml"
-#  vars:
-#    ansible_user: "{{ root_username }}"
-#    ansible_ssh_private_key_file: "{{ root_private_key_path }}"
-#
-#  tasks:
-#    - name: Your tasks here
-#      ansible.builtin.import_tasks: tasks/main.yml
-#      tags: always
+  tasks:
+    - name: Your tasks here
+      ansible.builtin.import_tasks: tasks/main.yml
+      tags: always
+      when: 
+        - "'tfvars' not in ansible_run_tags"
+        - "'destroy' not in ansible_run_tags"
+        - "'roles' not in ansible_run_tags"
+        - "'bootstrap' not in ansible_run_tags"
+        - "'print_inventory' not in ansible_run_tags"
+
+## 
+
+- ansible.builtin.import_playbook: playbooks/print_inventory/main.yml
+  tags: ['never', 'create', 'print_inventory']
+
