--- a/ansible/playbooks/terraform/create.yml
+++ b/ansible/playbooks/terraform/create.yml
@@ -19,7 +19,7 @@
         dest: "{{ playbook_dir }}/../../../terraform/terraform.tfvars"
 
   tasks:
-    - name: Run terraform to create infrastructure
+    - name: Run terraform to create the infrastructure and populate our dynamic inventory
       community.general.terraform:
         project_path: "{{ playbook_dir }}/../../../terraform/"
         variables_files: "{{ playbook_dir }}/../../../terraform/terraform.tfvars"
@@ -32,6 +32,10 @@
         hostname: "{{ item.value['vm'][0]['name'] }}"
         ansible_host: "{{ item.value['vm'][0]['ipv4_address'] }}"
         groups: "{{ item.value['vm'][0]['tags'] }}"
+        cloudprovider: digitalocean
+        ipv4: "{{ item.value['vm'][0]['ipv4_address'] }}"
+        ipv6: "{{ item.value['vm'][0]['ipv6_address'] }}"
+        group: "{{ item.value['vm'][0]['tags'] }}"
       changed_when: false
       with_dict: "{{ terraform_infra.outputs['digitalocean_vms'].value }}"
       when: terraform_infra.outputs['digitalocean_vms'].value['you_should_never_use_this_host_name']['vm'] is not defined
@@ -41,6 +45,16 @@
         hostname: "{{ item.value['vm'][0]['name'] }}"
         ansible_host: "{{ item.value['vm'][0]['ipv4_address'] }}"
         groups: "{{ item.value['vm'][0]['labels'].keys() }}"
+        cloudprovider: hetzner
+        ipv4: "{{ item.value['vm'][0]['ipv4_address'] }}"
+        ipv6: "{{ item.value['vm'][0]['ipv6_address'] }}"
+        group: "{{ item.value['vm'][0]['labels'].keys() }}"
       changed_when: false
       with_dict: "{{ terraform_infra.outputs['hetzner_vms'].value }}"
       when: terraform_infra.outputs['hetzner_vms'].value['you_should_never_use_this_host_name']['vm'] is not defined
+
+  post_tasks:
+    - name: Remove 'terraform.tfvars' file
+      ansible.builtin.file:
+        path: "{{ playbook_dir }}/../../../terraform/terraform.tfvars"
+        state: absent
