--- a/ansible/tasks/main.yml
+++ b/ansible/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
-###
-# Add your stuff here
-###
+- name: Your tasks here
+  debug:
+    msg: 
+      - "Guybrush: 'How can you see without eyeballs?'"
+      - "Murray: 'How can you walk around without a brain?'"
